objects/ASI_CRM_ServicePack__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Average_Cost_PromotionActivities__c</fullName>
        <inlineHelpText>Average Cost of Promotion Activities/ Management/ Anniversary/ Birthday</inlineHelpText>
        <label>Average Cost of Promotion Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Average_Salary_of_1_PG_per_Year__c</fullName>
        <label>Average Salary of 1 PG per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand_Activation__c</fullName>
        <label>Brand Activation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CallFrequency__c</fullName>
        <label>Call Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CallLength__c</fullName>
        <label>Call Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash_Sponsorship_US_Year__c</fullName>
        <label>Cash Sponsorship (US$/Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Activation__c</fullName>
        <label>Commercial Activation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ConsumerExperience__c</fullName>
        <label>Consumer Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>Branded Event</fullName>
                </value>
                <value>
                    <fullName>PG Roadshow</fullName>
                </value>
                <value>
                    <fullName>B Slush</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_p_Signage_p_Year_p_Outlet__c</fullName>
        <label>Cost per Signage per Year per Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Dice_Dice_Cup_per_Year__c</fullName>
        <label>Cost per Dice &amp; Dice Cup per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Drink_menus_per_year__c</fullName>
        <label>Cost per Drink menus per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Dummy_Bottle_per_Year__c</fullName>
        <label>Cost per Dummy Bottle per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Glassware_per_Year__c</fullName>
        <label>Cost per Glassware per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Glorifier_per_Year__c</fullName>
        <label>Cost per Glorifier per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_PG_Uniform_Investment__c</fullName>
        <label>Cost per PG Uniform Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_Podium_Stand_per_Year__c</fullName>
        <label>Cost per Podium Stand per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cost_per_VIP_Room_Investment__c</fullName>
        <label>Cost per VIP Room Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1,400 &amp; above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Listing_Fees__c</fullName>
        <label>Display/Listing Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentives_US_year__c</fullName>
        <label>Incentives (US$/year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_For_Account__c</fullName>
        <formula>ASI_CRM_SubChannel__r.Id +  ASI_CRM_OutletImage__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key For Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Keyman__c</fullName>
        <label>Keyman</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Market Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Dice_Dice_Cup__c</fullName>
        <label>No. of Dice &amp; Dice Cup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Drink_menus__c</fullName>
        <label>No. of Drink menus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Dummy_Bots__c</fullName>
        <label>No. of Dummy Bots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Glassware__c</fullName>
        <label>No. of Glassware</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Glorifier__c</fullName>
        <label>No. of Glorifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_PG_in_one_outlet__c</fullName>
        <label>No. of PG in one outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_PG_uniform__c</fullName>
        <label>No. of PG uniform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Podium_stand__c</fullName>
        <label>No. of Podium stand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Promotion_activiti_per_yr__c</fullName>
        <label>No. of Promotion activities per yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Signage_per_outlet__c</fullName>
        <label>No. of Signage per outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_VIP_room__c</fullName>
        <label>No. of VIP room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OutletImage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Image</label>
        <referenceTo>ASI_TH_CRM_OutletImage__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Sub_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Sub-Type</label>
        <referenceTo>ASI_TH_CRM_OutletSubType__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_TH_CRM_OutletType__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Presense__c</fullName>
        <label>Presence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_DAMD_Action__c</fullName>
        <label>DAMD Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drop</fullName>
                    <default>true</default>
                    <label>Drop</label>
                </value>
                <value>
                    <fullName>Attack</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>Traditional On-Trade (TOT)</fullName>
                </value>
                <value>
                    <fullName>LEB</fullName>
                </value>
                <value>
                    <fullName>HEB</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>RES</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Segmentation__c</fullName>
        <label>Image Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_Outlet_Type__c</fullName>
        <label>Sub Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_SG_Outlet_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Bar</fullName>
                </value>
                <value>
                    <fullName>Western Pub</fullName>
                </value>
                <value>
                    <fullName>Asian MOT</fullName>
                </value>
                <value>
                    <fullName>Bistro Bar</fullName>
                </value>
                <value>
                    <fullName>Social Clubs</fullName>
                </value>
                <value>
                    <fullName>Family KTV</fullName>
                </value>
                <value>
                    <fullName>Cocktail Bar</fullName>
                </value>
                <value>
                    <fullName>Hotel Lobby Bar</fullName>
                </value>
                <value>
                    <fullName>Asian TOT</fullName>
                </value>
                <value>
                    <fullName>Modern Bar</fullName>
                </value>
                <value>
                    <fullName>Dance Club</fullName>
                </value>
                <value>
                    <fullName>Western Restaurant</fullName>
                </value>
                <value>
                    <fullName>Asian Restaurant</fullName>
                </value>
                <value>
                    <fullName>Casual Dines</fullName>
                </value>
                <value>
                    <fullName>Premium Nightclub</fullName>
                </value>
                <value>
                    <fullName>KTV with Hostesses</fullName>
                </value>
                <value>
                    <fullName>Japanese/Korean KTV</fullName>
                </value>
                <value>
                    <fullName>Traditional Lounge</fullName>
                </value>
                <value>
                    <fullName>Hotel Lounge</fullName>
                </value>
                <value>
                    <fullName>International Western Bar</fullName>
                </value>
                <value>
                    <fullName>Live Band</fullName>
                </value>
                <value>
                    <fullName>DJ Café</fullName>
                </value>
                <value>
                    <fullName>Beer Bar</fullName>
                </value>
                <value>
                    <fullName>Traditional Dance Club</fullName>
                </value>
                <value>
                    <fullName>Local Restaurant W/ VIP Rooms</fullName>
                </value>
                <value>
                    <fullName>Local Restaurant W/O VIP Rooms</fullName>
                </value>
                <value>
                    <fullName>Casual Dining</fullName>
                </value>
                <value>
                    <fullName>International KTV</fullName>
                </value>
                <value>
                    <fullName>Local KTV</fullName>
                </value>
                <value>
                    <fullName>Japanese KTV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ServicePack_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Service Pack EXID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Service Packs</relationshipLabel>
        <relationshipName>Service_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Key_For_Account__c</fullName>
        <formula>ASI_CRM_Outlet_Sub_Type__r.Id + ASI_CRM_OutletImage__r.Id</formula>
        <label>Key For Account (TH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visibility__c</fullName>
        <label>Visibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glorifier</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Box Deco</fullName>
                </value>
                <value>
                    <fullName>Bar Styling</fullName>
                </value>
                <value>
                    <fullName>Back Bar Facing</fullName>
                </value>
                <value>
                    <fullName>Menu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Pack</label>
    <listViews>
        <fullName>ASI_CRM_TH_Service_Packs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_Type__c</columns>
        <columns>ASI_CRM_OutletImage__c</columns>
        <columns>ASI_CRM_ServicePack_EXID__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ServicePack__c.ASI_CRM_TH_ServicePack</value>
        </filters>
        <label>TH Service Packs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Service_Packs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_SubChannel__c</columns>
        <columns>ASI_CRM_OutletImage__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ServicePack__c.ASI_CRM_TW_ServicePack</value>
        </filters>
        <label>TW Service Packs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Service_Packs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Sub_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Segmentation__c</columns>
        <columns>ASI_CRM_SG_DAMD_Action__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ServicePack__c.ASI_CRM_VN_ServicePack</value>
        </filters>
        <label>All VN Service Packs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Service_Packs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_SubChannel__c</columns>
        <columns>ASI_CRM_OutletImage__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_ServicePack__c.ASI_CRM_SG_ServicePack</value>
        </filters>
        <label>SG Service Packs</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Service Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Packs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_ServicePack</fullName>
        <active>true</active>
        <label>ASI_CRM_SG_ServicePack</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_ServicePack</fullName>
        <active>true</active>
        <label>ASI_CRM_TH_ServicePack</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_ServicePack</fullName>
        <active>true</active>
        <label>ASI_CRM_TW_ServicePack</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_ServicePack</fullName>
        <active>true</active>
        <label>ASI CRM VN ServicePack</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>